[upgpkg]: stsw-link007 3.17.11